Add .review template

--- a/Config/whois.ini
+++ b/Config/whois.ini
@@ -904,6 +904,7 @@ whois.netearthone.com[template] = standard ; #1005
 whois.netregistry.net[template] = standard ; #677
 whois.networksolutions.com[template] = standard ; #2
 whois.nic.ru[template] = standard ; #463
+whois.nic.review[template] = standard ; #1362
 whois.nicline.com[template] = standard ; #379
 whois.nicproxy.com[template] = gtld_rrpproxy ; #1454
 whois.no-ip.com[template] = standard ; #1327
