Improve .kz whois parser

--- a/Config/whois.ini
+++ b/Config/whois.ini
@@ -715,6 +715,8 @@ venez[adapter] = http
 venez[template] = venez
 venez[encoding] = iso-8859-1
 
+webnames[server] = whois.webnames.ru
+webnames[template] = standard
 
 domain-registry-whois.l.google.com[template] = standard
 whois.afilias.net[template] = standard
